# open5gs

./: .gitignore
lib/: meson.build
lib/monitoring/: common.c  meson.build  monitoring.h  monitoring_senders.c
src/amf/: meson.build  nsmf-handler.c
